# caramel-poly

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  create-project-gmake.sh  create-project-vs2022.sh  premake5.lua
benchmark/dyno/any_iterator/: any_iterator.cpp  dyno_generic.hpp  handrolled_remote_storage.hpp  handrolled_sean.hpp  handrolled_vtable.hpp  sean.hpp  virtual.hpp
benchmark/dyno/storage/: ctor.copy.cpp  ctor.cpp  ctor.move.cpp  dispatch.many.cpp  dispatch.single.cpp  model.hpp  swap.different.cpp  swap.same.cpp
benchmark/dyno/vtable/: dispatch2.cpp  dispatch3.cpp  dispatch4.cpp  model.hpp
premake/: googlebenchmark.lua
premake/structure/: structure.lua
prototype/src/caramel-poly/: Poly.hpp
prototype/src/caramel-poly/compile-time/: String.hpp
prototype/src/caramel-poly/detail/: EmptyObject.hpp  Method.hpp  TransformSignature.hpp
prototype/src/caramel-poly/vtable/: ConceptMap.hpp  Local.hpp  MethodSignature.hpp  Object.hpp
prototype/test/caramel-poly/: Poly.cpp
prototype/test/caramel-poly/compile-time/: String.cpp
prototype/test/caramel-poly/detail/: Method.cpp
prototype/test/caramel-poly/test/: ConstructionRegistry.hpp
prototype/test/caramel-poly/vtable/: Concept.cpp  ConceptMap.cpp  Local.cpp
src/caramel-poly/: Concept.hpp  ConceptMap.hpp  ConstexprString.hpp  Method.hpp  Poly.hpp  SelfPlaceholder.hpp  String.hpp  Trait.hpp  TraitMap.hpp  builtin.hpp  dsl.hpp  storage.hpp  vtable.hpp
src/caramel-poly/compile-time/: String.hpp
src/caramel-poly/const-string/: ConstString.hpp
src/caramel-poly/detail/: BindSignature.hpp  CompileTimeMap.hpp  ConstexprList.hpp  ConstexprMap.hpp  ConstexprPair.hpp  ConstexprString.hpp  DefaultConstructibleLambda.hpp  EmptyObject.hpp  EraseFunction.hpp  EraseSignature.hpp  EraserTraits.hpp  Method.hpp  TransformSignature.hpp  isPlaceholder.hpp
src/caramel-poly/detail/boost_callable_traits/: function_type.hpp
src/caramel-poly/detail/boost_callable_traits/detail/: config.hpp  core.hpp  forward_declarations.hpp  function.hpp  function_object.hpp  is_invocable_impl.hpp  parameter_index_helper.hpp  pmd.hpp  pmf.hpp  qualifier_flags.hpp  set_function_qualifiers.hpp  sfinae_errors.hpp  traits.hpp  utility.hpp
src/caramel-poly/detail/boost_callable_traits/detail/unguarded/: function.hpp  function_2.hpp  function_ptr.hpp  function_ptr_2.hpp  function_ptr_varargs.hpp  function_ptr_varargs_2.hpp  pmf.hpp  pmf_2.hpp  pmf_3.hpp  pmf_varargs.hpp  pmf_varargs_2.hpp  pmf_varargs_3.hpp
src/caramel-poly/storage/: SBORemote.hpp  SharedRemote.hpp
src/caramel-poly/test/: ConstructionRegistry.hpp
src/caramel-poly/vtable/: Concept.hpp  ConceptMap.hpp  Container.hpp  DefaultConstructibleLambda.hpp  Local.hpp  Map.hpp  Method.hpp  MethodSignature.hpp  Static.hpp
test/: ConstructionRegistry.hpp
test/caramel-poly/: Concept.cpp  ConceptMap.cpp  ConstexprString.cpp  Poly.cpp  SelfPlaceholder.hpp  String.cpp  Trait.cpp  TraitMap.cpp  builtin.cpp  example.cpp  storage.cpp  vtable.cpp
test/caramel-poly/compile-time/: String.cpp
test/caramel-poly/const-string/: ConstString.cpp
test/caramel-poly/detail/: BindSignature.cpp  CompiletimeMap.cpp  ConstexprList.cpp  ConstexprMap.cpp  ConstexprPair.cpp  ConstexprString.cpp  DefaultConstructibleLambda.cpp  EraseFunction.cpp  EraseSignature.cpp  EraserTraits.cpp  Method.cpp  TransformSignature.cpp
test/caramel-poly/vtable/: Concept.cpp  ConceptMap.cpp  Container.cpp  DefaultConstructibleLambda.cpp  Local.cpp  Map.cpp  Method.cpp  Static.cpp
test/dyno/: awful.hpp  builtin.models.cpp  poly.ctor.copy.cpp  poly.ctor.implicit.cpp  poly.ctor.implicit.double_wrap.cpp  poly.ctor.map.cpp  poly.remote.size.cpp  poly.unsafe_get.cpp  poly.virtual.cpp  poly.virtual.method.cpp
test/dyno/example/: any_iterator.cpp  any_iterator.hpp  any_range.cpp  drawable.dyno.cpp  function.cpp  overview.cpp  readme.cpp  readme.non_member.cpp  vtable_traits.cpp
